@@ -1050,6 +1050,8 @@ $wgMessageStructure = array(
 		'rc_categories_any',
 		'rc-change-size',
 		'newsectionsummary',
+		'rc-enhanced-expand',
+		'rc-enhanced-hide',
 	),
 	'recentchangeslinked' => array(
 		'recentchangeslinked',
